# gnu_gnushogi

./: .gitignore  AUTHORS  CONTRIB  ChangeLog  Makefile.am  NEWS  README  README.maint  TODO  configure.ac
doc/: BOOKFILES  gnushogi.texi  internals.rst  shogi.rules
gnushogi/: Makefile.am  Makefile.in  attacks.c  book.c  book.h  commondsp.c  cursesdsp.c  eval.c  eval.h  genmove.c  globals.c  gnushogi.h  init-common.c  init.c  main.c  pat2inc.c  pattern.c  pattern.h  rawdsp.c  search.c  sizetest.c  tcontrl.c  tcontrl.h  util.c
